@startuml

title __BEAN's Class Diagram__\n

  namespace client.bean {
    enum Dir {
      D
      L
      LD
      LU
      R
      RD
      RU
      STOP
      U
    }
  }
  

  namespace client.bean {
    class client.bean.Explode {
        - diameters : int[]
        - live : boolean
        - step : int
        - x : int
        - y : int
        + Explode()
        + draw()
    }
  }
  

  namespace client.bean {
    class client.bean.Missile {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        {static} + XSPEED : int
        {static} + YSPEED : int
        ~ changeColor : int
        {static} - ID : int
        - good : boolean
        - id : int
        - live : boolean
        - tankId : int
        - x : int
        - y : int
        + Missile()
        + Missile()
        + draw()
        + getDir()
        + getId()
        + getRect()
        + getTankId()
        + getX()
        + getY()
        + hitObstacle()
        + hitTank()
        + hitTanks()
        + isGood()
        + isLive()
        + setDir()
        + setGood()
        + setId()
        + setLive()
        + setTankId()
        + setX()
        + setY()
        - move()
    }
  }
  

  namespace client.bean {
    class client.bean.Obstacle {
        - live : boolean
        - step : int
        - x1 : int
        - x2 : int
        - y1 : int
        - y2 : int
        + Obstacle()
        + blockTank()
        + checkTank()
        + draw()
        + getRect()
    }
  }
  

  namespace client.bean {
    class client.bean.Tank {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        {static} + XSPEED : int
        {static} + YSPEED : int
        + id : int
        - bD : boolean
        - bL : boolean
        - bR : boolean
        - bU : boolean
        - good : boolean
        {static} - imgs : Image[]
        - live : boolean
        {static} - map : Map<String, Image>
        {static} - tk : Toolkit
        - x : int
        - y : int
        + Tank()
        + Tank()
        + draw()
        + getDir()
        + getPtDir()
        + getRect()
        + getX()
        + getY()
        + isGood()
        + isLive()
        + keyPressed()
        + keyReleased()
        + setDir()
        + setGood()
        + setLive()
        + setPtDir()
        + setX()
        + setY()
        - fire()
        - locateDirection()
        - move()
    }
  }
  

  client.bean.Explode o-- client.client.TankClient : tc
  client.bean.Missile o-- client.bean.Dir : dir
  client.bean.Missile o-- client.client.TankClient : tc
  client.bean.Obstacle o-- client.client.TankClient : tc
  client.bean.Tank o-- client.bean.Dir : dir
  client.bean.Tank o-- client.bean.Dir : ptDir
  client.bean.Tank o-- client.client.TankClient : tc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
